# sparmos-website

./: Cargo.toml  badapple.mid  cplusplus.vox  csharp.vox  docker.vox  femoslangen.vox  hbfugl.vox  index.html  rust.vox
src/: app.rs  circular_buffer.rs  easter_egg.rs  gameloop.rs  gui.rs  lib.rs  main.rs  markers.rs  transition.rs  voxel_builder.rs
src/gui/: gui.rs  mod.rs  player.rs  player2.rs  sound_editor.rs
src/shaders/: boxes.wgsl  boxes_old.wgsl  lights.wgsl  lights_old.wgsl
