[package]
name = "sparmos-website"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sparmos-website"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }

sparmos-engine = { path = "../sparmos-engine", features = ["gui"] }
bytemuck = "1.25"
dot_vox = "5.2"
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
rand = "0.9"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "Window", "Element"] }

[profile.dev]
debug = true
opt-level = 0
# [profile.dev.package."sparmos-engine"]
# debug = true
# opt-level = 0
